# openvm-reth-benchmark

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cell_pgo.metrics  run.sh  rust-toolchain.toml
.cargo/: config.local.toml  config.template.toml  config.toml
.github/: runs-on.yml
.github/workflows/: build-server.yml  compare-bench.yml  compare-branches.yml  pr.yml  reth-benchmark.yml  run-benchmark-v2.yml  update-openvm.yml  update-patches.yml
ci/: monitor_memory.sh  update_openvm.sh
crates/executor/client/: Cargo.toml
crates/executor/client/src/: custom.rs  error.rs  io.rs  lib.rs
crates/executor/host/: Cargo.toml
crates/executor/host/src/: lib.rs
crates/executor/host/tests/: integration.rs
crates/host-bench/: Cargo.toml
crates/host-bench/src/: cli.rs  execute.rs  lib.rs
crates/mpt/: Cargo.toml
crates/mpt-tools/: Cargo.toml  README.md
crates/mpt-tools/benches/: mpt_performance.rs
crates/mpt-tools/src/: lib.rs
crates/mpt/src/: bump_bufmut.rs  from_proof.rs  hp.rs  lib.rs  mpt.rs  node.rs  resolver.rs  state.rs  tests.rs  trie.rs  word_bytes.rs
crates/mpt/src/mpt/: build_mpt.rs
crates/mpt/tests/: build_mpt_test.rs
crates/mptnew/: Cargo.toml
crates/mptnew/src/: hp.rs  lib.rs  state.rs  tests.rs  trie.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: chain_spec.rs
crates/revm-crypto/: Cargo.toml
crates/revm-crypto/src/: lib.rs
crates/storage/rpc-db/: Cargo.toml
crates/storage/rpc-db/src/: lib.rs
crates/storage/witness-db/: Cargo.toml
crates/storage/witness-db/src/: lib.rs
ethproofs/: README.md  ethproofs_api.py  prove_block.sh  run.py
scripts/: README.md  ethproofs_analyzer.py  plot_trace_cells.py  precompile_analyzer.py
server/: README.md  main.py  prove_block.sh  requirements.txt
