[workspace]
members = [
    "bin/host",
    "crates/executor/client",
    "crates/executor/host",
    "crates/mpt-tools",
    "crates/primitives",
    "crates/storage/rpc-db",
    "crates/host-bench",
    "crates/mpt",
    "crates/revm-crypto",
    "bin/verifier-bench"
]
exclude = []
resolver = "3"

[workspace.package]
version = "0.3.0"
repository = "https://github.com/axiom-crypto/openvm-reth-benchmark"
homepage = "https://github.com/axiom-crypto/openvm-reth-benchmark"
edition = "2024"
exclude = ["**/target"]

[workspace.dependencies]
# Not directly used, just to have rayon feature always
hashbrown = { version = "0.15.4", features = ["rayon"] }
bincode_derive = "2.0.0"
eyre = "0.6"
tracing = { version = "0.1.40", default-features = false }
tokio = { version = "1.44.1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
serde_json = "1.0.110"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = "3.13.0"
futures = "0.3"
url = "2.3"
thiserror = "2.0.12"
hex-literal = "1.0.0"
rayon = "1.10.0"
bincode = { version = "2.0.1", default-features = false, features = [
    "derive",
    "alloc",
    "serde",
] }
toml = "0.9.2"
derive_more = "1.0.0"
smallvec = "1.13"
bumpalo = "3.19.0"
bytes = "1"
bitcode = { version = "0.6.5", default-features = false, features = ["serde"] }
itertools = "0.14"

# workspace
openvm-rpc-db = { path = "./crates/storage/rpc-db" }
openvm-client-executor = { path = "./crates/executor/client" }
openvm-host-executor = { path = "./crates/executor/host" }
openvm-primitives = { path = "./crates/primitives" }
openvm-reth-benchmark = { path = "./crates/host-bench", default-features = false }
openvm-mpt = { path = "./crates/mpt" }
openvm-revm-crypto = { path = "./crates/revm-crypto" }

# reth
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false, features = [
    "serde",
    "serde-bincode-compat",
] }

# revm
revm = { version = "31.0.2", features = ["serde"], default-features = false }
revm-primitives = { version = "21.0.2", features = [
    "serde",
], default-features = false }
revm-interpreter = { version = "29.0.1", default-features = false }
revm-precompile = { version = "27.0.0", default-features = false }

# alloy
alloy-primitives = { version = "1.4.1", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false }

alloy-hardforks = "0.4.5"
alloy-eips = { version = "1.1.3", default-features = false }

alloy-consensus = { version = "1.1.3", default-features = false, features = [
    "serde",
    "serde-bincode-compat",
] }
alloy-provider = { version = "1.1.3", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rpc-client = { version = "1.1.3", default-features = false, features = [
    "reqwest",
] }
alloy-rpc-types = { version = "1.1.3", default-features = false, features = [
    "eth",
] }
alloy-transport = { version = "1.1.3" }

openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.2.2", default-features = false }
openvm-cuda-backend = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.2.2", default-features = false }

# Note: the openvm-sdk commit does not need to be exactly the same as the `openvm` commit used in the guest program: as long as
# the openvm-sdk commit doesn't change any guest libraries, they are compatible
# This allows us to not update revm and openvm-kzg each time we change openvm-sdk
# Using main from 10/13/2025 for now
openvm-build = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-continuations = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-benchmarks-prove = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-keccak256-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-keccak256-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-rv32im-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-rv32im-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-bigint-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-bigint-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-algebra-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-algebra-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-ecc-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-ecc-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-pairing-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-native-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-native-compiler = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-native-recursion = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-keccak256 = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }
openvm-pairing = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false, features = [
    "bn254",
    "bls12_381",
] }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", branch = "main", default-features = false }

openvm-kzg = { git = "https://github.com/axiom-crypto/openvm-kzg.git", branch = "openvm-main", default-features = false }

openvm-k256 = { git = "https://github.com/openvm-org/openvm.git", package = "k256", branch = "main" }
openvm-p256 = { git = "https://github.com/openvm-org/openvm.git", package = "p256", branch = "main" }

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[profile.release]
lto = "thin"

[profile.profiling]
inherits = "maxperf"
debug = "full"
strip = "none"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 3

# Profile with debugging symbols for memory profiling
[profile.bench-with-debug]
inherits = "release"
debug = 1
